# testpython

./: .dockerignore  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README.md  db.sqlite3  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
app/: admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
app/management/commands/: __init__.py  create_superuser_if_not_exists.py
app/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
core/management/commands/: setup_db.py
templates/: app_interface.html
templates/app/: notifications_test.html
